--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,5 +27,6 @@
     <color name="text_green">#009700</color>
     <color name="text_amber">#B9921C</color>
     <color name="text_white">#E8E8E8</color>
+    <color name="text_blue">#1BB8FF</color>
 
 </resources>
