--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,5 +28,7 @@
     <color name="text_amber">#B9921C</color>
     <color name="text_white">#E8E8E8</color>
     <color name="text_blue">#1BB8FF</color>
+    <color name="card_inactive">#0087C5</color>
+    <color name="card_active">#79D5FF</color>
 
 </resources>
