--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,15 +26,16 @@
     <color name="led_panel">#131313</color>
     <color name="text_green">#009700</color>
     <color name="text_amber">#B9921C</color>
-    <color name="text_white">#E8E8E8</color>
+    <color name="text_white">#FFFFFF</color>
     <color name="text_blue">#1BB8FF</color>
 
     <color name="upgrade_inactive">#7C878C</color>
     <color name="upgrade_active_general">#79D5FF</color>
-    <color name="upgrade_active_eco">#FFC907</color>
+    <color name="upgrade_active_eco">#FFFFFF</color>
     <color name="upgrade_active_speed">#9C27B0</color>
     <color name="upgrade_active_chip_dec">#DA07DD00</color>
     <color name="upgrade_active_chip_shr">#DA649DF3</color>
+    <color name="upgrade_active_acc">#FFC107</color>
 
 
 </resources>
