on the welcome screen, the RESUME button now shows the next level to be played. Also fixed a bug when trying to resume after the max level.

--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -11,10 +11,11 @@
         android:id="@+id/startGameButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/purple_500"
         android:clickable="true"
         android:focusable="true"
         android:onClick="startNewGame"
-        android:text="@string/startGame"
+        android:text="@string/button_startGame"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,6 +26,7 @@
         android:id="@+id/selectLevelButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/purple_500"
         android:clickable="true"
         android:focusable="true"
         android:onClick="startLevelSelection"
@@ -37,6 +39,7 @@
         android:id="@+id/continueGameButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/purple_500"
         android:clickable="true"
         android:focusable="true"
         android:onClick="resumeGame"
@@ -49,13 +52,15 @@
         android:id="@+id/settingsButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/purple_500"
         android:clickable="true"
         android:focusable="true"
         android:onClick="displaySettingsDialog"
         android:text="@string/settings_title"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/startGameButton"
-        app:layout_constraintTop_toBottomOf="@+id/continueGameButton" />
+        app:layout_constraintTop_toBottomOf="@+id/continueGameButton"
+        />
 
     <TextView
         android:id="@+id/versionText"
