--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -33,6 +33,10 @@
     <color name="led_red_glow">#D50000</color>
     <color name="led_green">#00EF18</color>
     <color name="led_green_glow">#00A511</color>
+    <color name="led_blue">#1BB8FF</color>
+    <color name="led_blue_glow">#006A9A</color>
+    <color name="led_turbo">#FFC44F</color>
+    <color name="led_turbo_glow">#B9921C</color>
     <color name="led_panel">#131313</color>
     <color name="text_green">#009700</color>
     <color name="text_lightgreen">#79CD79</color>
