--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -131,5 +131,13 @@
         app:layout_constraintTop_toTopOf="@+id/continueGameButton"
         app:srcCompat="@drawable/deko" />
 
+    <ImageView
+        android:id="@+id/sevenSegmentDisplay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/highestStageReached"
+        app:layout_constraintStart_toStartOf="@+id/startGameButton"
+        app:srcCompat="@drawable/digit_8" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
