--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -9,8 +9,9 @@
 
     <Button
         android:id="@+id/startGameButton"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
         android:background="@color/purple_500"
         android:clickable="true"
         android:focusable="true"
@@ -18,13 +19,12 @@
         android:text="@string/button_startGame"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 
     <Button
         android:id="@+id/selectLevelButton"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@color/purple_500"
         android:clickable="true"
@@ -32,12 +32,13 @@
         android:onClick="startLevelSelection"
         android:text="@string/selectLevel"
         app:layout_constraintBottom_toTopOf="@id/continueGameButton"
+        app:layout_constraintEnd_toEndOf="@+id/startGameButton"
         app:layout_constraintStart_toStartOf="@+id/startGameButton"
         app:layout_constraintTop_toBottomOf="@id/startGameButton" />
 
     <Button
         android:id="@+id/continueGameButton"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@color/purple_500"
         android:clickable="true"
@@ -45,12 +46,13 @@
         android:onClick="resumeGame"
         android:text="@string/button_resume"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/selectLevelButton"
         app:layout_constraintStart_toStartOf="@+id/startGameButton"
         app:layout_constraintTop_toBottomOf="@+id/startGameButton" />
 
     <Button
         android:id="@+id/settingsButton"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@color/purple_500"
         android:clickable="true"
@@ -58,9 +60,9 @@
         android:onClick="displaySettingsDialog"
         android:text="@string/settings_title"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/continueGameButton"
         app:layout_constraintStart_toStartOf="@+id/startGameButton"
-        app:layout_constraintTop_toBottomOf="@+id/continueGameButton"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/continueGameButton" />
 
     <TextView
         android:id="@+id/versionText"
@@ -123,11 +125,12 @@
         android:id="@+id/sevenSegmentDisplay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="48dp"
+        android:layout_marginBottom="80dp"
         android:onClick="showMaxLevelInfo"
         app:layout_constraintBottom_toTopOf="@+id/startGameButton"
-        app:layout_constraintEnd_toEndOf="@+id/deko1"
+        app:layout_constraintEnd_toEndOf="@+id/startGameButton"
         app:srcCompat="@drawable/mask"
         tools:ignore="SpeakableTextPresentCheck" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
