--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,9 +23,11 @@
     <color name="chips_mem_glow">#BCA7E1</color>
     <color name="chips_acc_foreground">#FFEB3B</color>
     <color name="chips_acc_glow">#FFF7AF</color>
+    <color name="chips_clk_foreground">#5E2500</color>
+    <color name="chips_clk_glow">#683615</color>
     <color name="chips_shl_foreground">#BA0600</color>
     <color name="chips_shl_glow">#CF605C</color>
-    <color name="chips_add_foreground">#E6410F</color>
+    <color name="chips_add_foreground">#FF4B14</color>
     <color name="chips_add_glow">#C85E3E</color>
     <color name="chips_background">#FF000000</color>
 
@@ -49,7 +51,7 @@
     <color name="upgrade_inactive">#7C878C</color>
     <color name="upgrade_active_general">#79D5FF</color>
     <color name="upgrade_active_eco">#FF8400</color>
-    <color name="upgrade_active_speed">#E1353B</color>
+    <color name="upgrade_active_meta">#E1353B</color>
     <color name="upgrade_active_chip_sub">#07DD00</color>
     <color name="upgrade_active_chip_shr">#649DF3</color>
     <color name="upgrade_active_chip_acc">#FFC107</color>
