--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -51,7 +51,7 @@
     <color name="upgrade_inactive">#7C878C</color>
     <color name="upgrade_active_general">#79D5FF</color>
     <color name="upgrade_active_eco">#FF8400</color>
-    <color name="upgrade_active_meta">#E1353B</color>
+    <color name="upgrade_active_meta">#FF3138</color>
     <color name="upgrade_active_chip_sub">#07DD00</color>
     <color name="upgrade_active_chip_shr">#649DF3</color>
     <color name="upgrade_active_chip_acc">#FFC107</color>
