--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -44,7 +44,7 @@
     <color name="text_green">#009700</color>
     <color name="text_lightgreen">#79CD79</color>
     <color name="text_amber">#B9921C</color>
-    <color name="text_lightamber">#FFDE7A</color>
+    <color name="text_lightamber">#fdd300</color>
     <color name="text_white">#FFFFFF</color>
     <color name="text_blue">#1BB8FF</color>
 
