--- a/app/src/main/res/layout/layout_dialog_new_game.xml
+++ b/app/src/main/res/layout/layout_dialog_new_game.xml
@@ -4,53 +4,53 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/shape_border_bicolour"
+    android:background="@drawable/shape_border_yellow"
     android:scaleType="centerCrop">
 
     <TextView
         android:id="@+id/question"
         android:layout_width="240sp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
         android:text="Question"
-        android:textColor="@color/text_blue"
+        android:textColor="@color/connectors"
         android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="0dp"
+        android:layout_marginBottom="32dp"
         android:background="@color/black"
-        android:backgroundTint="@color/black"
-        android:backgroundTintMode="src_over"
+        app:backgroundTint="@null"
         android:text="Answer 1"
         android:textAllCaps="true"
-        android:textColor="@color/text_blue"
+        android:textColor="@color/text_amber"
         android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/question"
-        app:layout_constraintBottom_toTopOf="@id/button2" />
+        app:layout_constraintTop_toBottomOf="@id/question" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="24dp"
         android:background="@color/black"
+        app:backgroundTint="@null"
         android:text="Answer 2"
         android:textAllCaps="true"
-        android:textColor="@color/text_lightblue"
+        android:textColor="@color/text_lightamber"
         android:textSize="24sp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintStart_toStartOf="@+id/button1"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@id/button1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button1"
+        app:layout_constraintTop_toTopOf="@id/button1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
