--- a/app/src/main/res/drawable/shape_border_yellow.xml
+++ b/app/src/main/res/drawable/shape_border_yellow.xml
@@ -7,18 +7,13 @@
     </item>
     <item>
         <shape>
-            <stroke android:width="5dp" android:color="@color/text_lightamber" />
-            <padding android:left="2dp" android:top="2dp" android:right="2dp" android:bottom="2dp" />
+            <stroke android:width="5dp" android:color="@color/circuit_edge" />
+            <padding android:left="1dp" android:top="1dp" android:right="1dp" android:bottom="1dp" />
         </shape>
     </item>
     <item>
         <shape>
-            <stroke android:width="3dp" android:color="@color/text_amber" />
-        </shape>
-    </item>
-    <item>
-        <shape>
-            <stroke android:width="1dp" android:color="@color/deco_white" />
+            <stroke android:width="3dp" android:color="@color/circuit" />
         </shape>
     </item>
 </layer-list>
